--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  scroll-behavior: smooth;
 }
 a {
   text-decoration: none;
@@ -156,10 +157,23 @@ section#section-home {
 /* TECHS */
 
 section#techs {
+  position: relative;
   padding-block: 42px;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+#techs::after {
+  content: "";
+  position: absolute;
+  top: 10px;
+  width: 369px;
+  height: 369px;
+  border-radius: 50%;
+  background-color: var(--blur-color);
+  opacity: 12%;
+  filter: blur(150px);
+  z-index: -1;
 }
 #techs #content-techs {
   display: flex;
@@ -192,3 +206,98 @@ section#techs {
 
 /* PROJECTS */
 
+section#projects {
+  padding: 0 39px;
+  margin-block: 100px;
+}
+section#projects h3 {
+  background-image: var(--text-gradient);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-weight: 600;
+  font-size: 20px;
+}
+#cards-projects {
+  margin-top: 52px;
+  padding-inline: 32px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 58px;
+}
+#cards-projects .card {
+  width: 472px;
+  height: 540px;
+  background-color: #0B0F25;
+  border-radius: 24px;
+  box-shadow: 4px 4px 12px #262C4E;
+  padding: 38px 38px 32px 38px;
+  cursor: pointer;
+}
+.card .presentation {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.card .presentation .number {
+  font-size: 13rem;
+  font-weight: 500;
+  background: linear-gradient(180deg, #026a9e 22.54%, #0B0F25 85.65%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+.card .presentation img {
+  width: 310px;
+  height: 206px;
+  box-shadow: 0px 0px 8px 0px #ffffff23;
+  border-radius: 24px;
+}
+.card .title-project {
+  text-align: center;
+  font-weight: 500;
+  color: #fff;
+  font-size: 2rem;
+  margin: 32px 0 28px 0;
+}
+.card .description-project {
+  color: #fff;
+  font-size: 1.6rem;
+  line-height: 140%;
+  margin-bottom: 28px;
+}
+.card .view-project {
+  padding-inline: 20px;
+  padding-block: 12px;
+  border-radius: 24px;
+  background: linear-gradient(90deg, #005D8A 2.6%, #0B1578 93.23%);
+  text-align: center;
+  border: none;
+  float: right;
+}
+.card .view-project a {
+  color: #fff;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  gap: 14px;
+  font-family: 'Montserrat';
+}
+#projects .view-projects {
+  margin-top: 58px;
+  margin-left: 38%;
+  padding-inline: 20px;
+  padding-block: 12px;
+  border-radius: 24px;
+  background: linear-gradient(90deg, #005D8A 2.6%, #0B1578 93.23%);
+  text-align: center;
+  border: none;
+}
+#projects .view-projects a {
+  color: #fff;
+  font-weight: 600;
+  display: flex;
+  align-items: center;
+  gap: 14px;
+  font-family: 'Montserrat';
+}
