--- a/style.css
+++ b/style.css
@@ -52,8 +52,14 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  scroll-behavior: smooth;
   overflow: auto;
+}
+html,
+body {
+  scroll-behavior: smooth;
+}
+section:target {
+  scroll-margin-top: 5rem;
 }
 a {
   text-decoration: none;
@@ -86,26 +92,16 @@ section {
   animation: motion-logo 4s ease-in-out;
 }
 @keyframes motion-logo {
-  50% {
-    transform: translateY(-16px);
+  30% {
+    transform: translateY(-12px);
     opacity: 100%;
   } 75% {
     transform: translateY(0);
     opacity: 70%;
   } 100% {
-    transform: translateY(-800px);
-    opacity: 0%;
+    transform: translateY(-16px);
+    opacity: 30%;
   }
-}
-#preloader::before {
-  content: "";
-  position: absolute;
-  width: 208px;
-  height: 384px;
-  background: linear-gradient(180deg, rgba(0, 179, 218, 0.17) -0.09%, rgba(0, 179, 218, 0) 100%);
-  filter: blur(15px);
-  margin-top: -40%;
-  opacity: 70%;
 }
 #preloader::after {
   content: "";
@@ -115,7 +111,7 @@ section {
   background: #8AEAFF;
   border-radius: 50%;
   opacity: 70%;
-  filter: blur(30px);
+  filter: blur(28px);
   margin-top: 190px;
 }
 #content {
@@ -126,20 +122,25 @@ section {
 nav {
   width: 100%;
   height: 10rem;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
+  position: fixed;
+  background: #20002c;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to bottom, #000314, #00031400);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to bottom, #000314 25%, #00031400 100%); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  z-index: 20;
 }
-nav::after {
+body::after {
   content: "";
   position: absolute;
   width: 50.3rem;
   height: 50.3rem;
   border-radius: 50%;
   background-color: var(--blur-color);
-  opacity: 15%;
+  opacity: 50%;
   filter: blur(150px);
-  top: -32.3rem;
+  top: -60rem;
   z-index: -1;
 }
 nav a + a {
@@ -175,7 +176,8 @@ nav #logomarca {
 
 /* SECTION HOME */
 
-section#section-home {
+section#home {
+  margin-top: 80px;
   padding: 89px 38px 89px 38px;
   display: flex;
   align-items: center;
