--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 :root {
-  --bg-color: #000314;
+  --bg-color: #000319;
   --blur-color: #00B2FF;
   --text-gradient: linear-gradient(90deg, #52CBFF 0%, #0075FF 90%);
   font-size: 62.5%;
@@ -52,7 +52,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow: auto;
+  overflow: hidden;
 }
 html,
 body {
@@ -72,7 +72,6 @@ button {
 section {
   width: min(100vw, 1216px);
 }
-
 /* PRELOADER */
 
 #preloader {
@@ -110,19 +109,22 @@ section {
   height: 8px;
   background: #8AEAFF;
   border-radius: 50%;
-  opacity: 70%;
+  opacity: 50%;
   filter: blur(28px);
   margin-top: 190px;
 }
+/*
 #content {
   display: none;
 }
+*/
 /* NAVIGATION */
 
 nav {
   width: 100%;
   height: 10rem;
   display: none;
+  /*display: flex;*/
   align-items: center;
   justify-content: center;
   position: fixed;
@@ -306,7 +308,6 @@ section#techs {
 /* PROJECTS */
 
 section#projects {
-  position: relative;
   padding: 0 38px;
   margin-block: 100px;
 }
@@ -318,105 +319,69 @@ section#projects h3 {
   font-weight: 600;
   font-size: 20px;
 }
-#slider {
-  margin-top: 52px;
+
+section#projects .projects-box {
   width: 100%;
-  height: 500px;
-  padding-inline: 8px;
-  padding-block: 8px;
-  overflow: hidden;
-  position: relative;
-  display: flex;
-  align-items: center;
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
 }
-#cards-slides {
-  display: flex;
-  align-items: center;
-  position: relative;
-  overflow: hidden;
-  padding: 10px 8px 8px 8px;
-  width: 1648px;
-  transition: margin-left 1s ease;
+
+section#projects .projects-box .projects {
+  max-width: 608px;
+  height: 269px;
+  cursor: pointer;
 }
-#slider #shadow {
-  position: absolute;
-  background-image: linear-gradient(to left, #000314d5 10%, #00031400 100%);
-  width: 100px;
+section#projects .projects-box .projects .description-of-projects {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: end;
+  width: 100%;
   height: 100%;
-  margin-left: 1028px;
-}
-#slider .card {
-  width: 370px;
-  background-color: #0B0F25;
-  -webkit-box-shadow: 0px 0px 12px 1px rgba(0,178,255,0.21); 
-  box-shadow: 0px 0px 12px 1px rgba(0,178,255,0.21);
-  border-radius: 12px;
-  padding: 32px 38px 32px 38px;
-  transition: all .4s ease;
-}
-#slider .card:hover {
-  transform: translateY(-8px);
-  -webkit-box-shadow: 0px 2px 12px 1px rgba(0,178,255,0.22); 
-  box-shadow: 0px 2px 12px 1px rgba(0,178,255,0.22);
-}
-#slider .card + .card {
-  margin-left: 42px;
-}
-.card .presentation {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 30px;
-}
-.card .presentation .number {
-  font-size: 10rem;
-  font-weight: 500;
-  background: linear-gradient(180deg, #026a9e 22.54%, #0B0F25 85.65%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-}
-.card .presentation img {
-  width: 220px;
-  box-shadow: 0px 0px 8px 0px #ffffff23;
-  border-radius: 24px;
-}
-.card .title-project {
-  text-align: center;
-  font-weight: 500;
   color: #fff;
-  font-size: 1.8rem;
-  margin: 32px 0 28px 0;
+  padding: 32px;
+  transition: all 0.2s ease;
+  
 }
-.card .description-project {
-  color: rgb(214, 214, 214);
-  font-size: 1.4rem;
-  line-height: 140%;
-  margin-bottom: 28px;
+.projects .description-of-projects h4,
+.projects .description-of-projects p, 
+.projects .description-of-projects svg {
+  opacity: 0;
+  transition: all 0.2s ease;
 }
-.card .view-project {
-  padding-inline: 18px;
-  padding-block: 10px;
-  border-radius: 24px;
-  background: linear-gradient(90deg, #005D8A 2.6%, #0B1578 93.23%);
-  text-align: center;
-  border: none;
-  float: right;
-  transition: all .2s ease;
+.projects .description-of-projects h4 {
+  margin-top: 32px;
+  margin-bottom: 24px;
 }
-.card .view-project a {
-  color: #fff;
-  font-weight: 500;
-  display: flex;
-  align-items: center;
-  gap: 12px;
-  font-family: 'Montserrat';
+.projects .description-of-projects p {
+  font-size: 14px;
 }
-.card .view-project:hover {
-  transform: translateX(2px);
-  -webkit-box-shadow: 0px 2px 5px 3px rgba(173, 173, 173, 0.116); 
-  box-shadow: 0px 2px 5px 3px rgba(173, 173, 173, 0.116);
+
+.projects .description-of-projects:hover {
+  background: rgb(0,0,0);
+  background: linear-gradient(0deg, rgba(0,0,0,1) 20%, rgba(0,3,25,0) 100%);
 }
+.projects .description-of-projects:hover h4,
+.projects .description-of-projects:hover p,
+.projects .description-of-projects:hover svg {
+  opacity: 1;
+}
+
+.projects:nth-child(1) {
+  background: url(./assets/jeremarques.github.io_dell-toro-steakhouse_.png) top/cover no-repeat;
+}
+.projects:nth-child(2) {
+  background: url(./assets/jereweather.vercel.app_.png) top/cover no-repeat;
+}
+.projects:nth-child(3) {
+  background: url(./assets/jeremarques.github.io_search-user-with-github-api_.png) top/cover no-repeat;
+}
+.projects:nth-child(4) {
+  background: url(./assets/list-of-collaborators-jsx.vercel.app_.png) top/cover no-repeat;
+}
+
 #projects .view-projects {
   margin-top: 58px;
   margin-left: 41%;
@@ -440,36 +405,4 @@ section#projects h3 {
   margin-left: 41.3%;
   -webkit-box-shadow: 0px 2px 5px 3px rgba(173, 173, 173, 0.116); 
   box-shadow: 0px 2px 5px 3px rgba(173, 173, 173, 0.116);
-}
-#projects #prev,
-#projects #next {
-  background: rgb(189, 189, 189);
-  position: absolute;
-  color: #000;
-  padding: 12px 10px 12px 10px;
-  border-radius: 50%;
-  line-height: 0;
-  cursor: pointer;
-  transition: all .3s ease-out;
-}
-#projects #prev {
-  top: 43%;
-  left: -1%;
-}
-#projects #prev svg {
-  transform: rotate(180deg);
-}
-#projects #next {
-  top: 45%;
-  left: 98%;
-}
-#projects #prev:hover {
-  top: 42%;
-  -webkit-box-shadow: 0px 3px 16px 3px rgba(173, 173, 173, 0.363); 
-  box-shadow: 0px 3px 16px 3px rgba(173, 173, 173, 0.363);
-}
-#projects #next:hover {
-  top: 44%;
-  -webkit-box-shadow: 0px 3px 16px 3px rgba(173, 173, 173, 0.363); 
-  box-shadow: 0px 3px 16px 3px rgba(173, 173, 173, 0.363);
 }
